<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications_category">
        <SwitchPreferenceCompat
            android:key="notifications_enabled"
            android:title="@string/enable_notifications_title"
            android:summary="@string/enable_notifications_summary"
            android:defaultValue="true" />
        <ListPreference
            android:key="postpone_duration"
            android:title="@string/postpone_duration_title"
            android:summary="@string/postpone_duration_summary"
            android:entries="@array/postpone_durations"
            android:entryValues="@array/postpone_duration_values"
            android:defaultValue="15" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reminders_category">
        <Preference
            android:key="reset_reminders"
            android:title="@string/reset_reminders_title"
            android:summary="@string/reset_reminders_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/data_management_category">
        <Preference
            android:key="clear_history"
            android:title="@string/clear_history_title"
            android:summary="@string/clear_history_summary" />
        <Preference
            android:key="clear_all_medications"
            android:title="@string/clear_all_medications_title"
            android:summary="@string/clear_all_medications_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/language_category">
        <ListPreference
            android:key="language"
            android:title="@string/language_title"
            android:summary="@string/language_summary"
            android:entries="@array/language_options"
            android:entryValues="@array/language_values"
            android:defaultValue="en" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_category">
        <ListPreference
            android:key="theme_mode"
            android:title="@string/theme_mode_title"
            android:summary="@string/theme_mode_summary"
            android:entries="@array/theme_mode_options"
            android:entryValues="@array/theme_mode_values"
            android:defaultValue="system" />
    </PreferenceCategory>
</PreferenceScreen>