<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/medicationListFragment">

    <fragment
        android:id="@+id/medicationListFragment"
        android:name="com.example.medireminder.ui.MedicationListFragment"
        android:label="@string/medication_list_title" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.medireminder.ui.HistoryFragment"
        android:label="@string/history_title" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.medireminder.ui.SettingsFragment"
        android:label="@string/settings_title" />
</navigation>